<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TimerDroid</string>
    <string name="main_preferences">Settings</string>
    <string name="main_deletedialog_title_1">Really stop</string>
    <string name="main_deletedialog_title_2">timer?</string>
    <string name="main_deletedialog_yes">Yes</string>
    <string name="main_deletedialog_no">No</string>
    
    <!-- Main Menu -->	
	<string name="menu_about">About</string>
	<string name="menu_feedback">Feedback</string>
	<string name="menu_share">Share</string>
	<string name="menu_new_timer">New Timer</string>
	<string name="menu_new_category">New Category</string>
	<string name="feedback_chooser_title">Choose app</string>
	<string name="menu_feedback_subject">Feedback Timerdroid Tablet</string>
	<string name="menu_feedback_address">tomatodevs@googlemail.com</string>
	<string name="menu_share_url">https://market.android.com/details?id=com.tomatodev.timerdroid</string>
	<string name="menu_share_subject">Android Timer App</string>
	<string name="about_author_label">Author</string>
	<string name="about_author">Martin Hoffmann</string>
	<string name="about_version_label">Version</string>
	<string name="about_version">2.1.1</string>
	<string name="about_url_label">Website</string>
	<string name="about_url">\s"https://plus.google.com/106539403614439122831" </string>
	<string name="menu_about_button_text">OK</string>

    <!-- CreateTimer/Update Timer -->
    <string name="cr_timer_choose_category_prompt">Choose category</string>
	<string name="cr_timer_hours">Hours</string>
	<string name="cr_timer_minutes">Minutes</string>
	<string name="cr_timer_seconds">Seconds</string>
	<string name="cr_timer_save">Save</string>
	<string name="cr_timer_nameLabel">Name</string>
	<string name="cr_timer_custom">Timer</string>
	<string name="cr_timer_category">Category</string>
	<string name="cr_timer_favorite">Favorite</string>

	<string name="prefs_activity_title">Settings</string>
	<string name="prefs_title_alarms">Alarms</string>
	<string name="prefs_title">Settings</string>
	<string name="prefs_ringtone_title">Alarm tone</string>
	<string name="prefs_ringtone_summary">Choose the alarm tone</string>
	<string name="prefs_volume_title">Alarm volume</string>
	<string name="prefs_volume_dialog">Choose the volume</string>
	<string name="prefs_vibration_title">Vibration</string>
	<string name="prefs_vibration_summary">Enable vibration</string>
	<string name="prefs_insistent_alarm_title">Ongoing alarm</string>
	<string name="prefs_insistent_alarm_summary">Continue alarm until I stop it</string>
	<string name="prefs_title_screen">Screen</string>
	<string name="prefs_screen_unlocked_title">Unlocked screen</string>
	<string name="prefs_screen_unlocked_summary">Don\'t lock the screen when a timer is running</string>
	
	<string name="categories_add">Add category</string>
	<string name="categories_action_edit">Edit</string>
	<string name="categories_action_delete">Delete</string>
	<string name="categories_action_run_in_queue">Run timers as queue</string>
	<string name="categories_title">Categories</string>
	<string name="categories_add_category">Add Category</string>
	<string name="categories_rename_category">Edit Category</string>
	<string name="categories_choose_image">Choose image</string>
	<string name="categories_deletedialog_title_1">Really delete this category</string>
    <string name="categories_deletedialog_title_2">and all its timers?</string>
	
	<string name="list_timers_title">Timers</string>
	<string name="list_timers_title_favorites">Favorites</string>
	<string name="list_timers_toast_help">Press a timer to start it, press longer to edit or delete</string>
	<string name="list_timers_action_edit">Edit</string>
	<string name="list_timers_action_delete">Delete</string>
	<string name="list_timers_action_run_repeated">Run repeated</string>
	<string name="list_timers_choose_action">Choose Action</string>
	<string name="list_timers_repeat_title">How often should it run?</string>
	<string name="list_timers_delete_title">Delete timer?</string>
	<string name="list_timers_start">OK</string>
	<string name="list_timers_cancel">Cancel</string>
	
	<string name="service_running_timers">Running</string>
	<string name="service_no_running_timers">No timers running</string>
	<string name="service_timer_label">Timer</string>
	<string name="service_running_label">running</string>
	<string name="service_started_label">started</string>
	<string name="service_stopped_label">stopped</string>
	<string name="service_finished_label">finished</string>
	<string name="service_toast_timer_finished">timer finished</string>	
	
	<string name="widget_loading">loading&#8230;</string>
	<string name="widget_choose_timer">Choose a timer</string>	
	<string name="create_timer_save">Save</string>	
	<string name="create_timer_start">Start</string>	
	<string name="create_timer_no_time_set">Please specify time</string>	
	<string name="create_timer_no_name_set">Please specify a name</string>	
	<string name="create_timer_timer_saved">Timer saved</string>	
	<string name="running_timers">Running timers</string>	
	<string name="no_timers_running">No timers running</string>	
	<string name="no_timers_in_this_category">No timers in this category</string>
		
	<string name="popup_timer_stop">Stop</string>
    <string name="home">Home</string>

</resources>
