<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add_category"
        android:icon="@drawable/add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_new_category"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/settings"
        android:showAsAction="ifRoom|withText"
        android:title="@string/main_preferences"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="withText"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_feedback"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="withText"
        android:title="@string/menu_feedback"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="withText"
        android:title="@string/menu_share"/>

</menu>